--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
+ENV=development
 PORT=3000
 CORS_ORIGIN='*'
 DEFAULT_SRC="'self'"
 SCRIPT_SRC="'self','unsafe-inline','unsafe-eval'"
+SESSION_SECRET=secret
