--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
