--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ CORS_ORIGIN='*'
 DEFAULT_SRC="'self'"
 SCRIPT_SRC="'self','unsafe-inline','unsafe-eval'"
 SESSION_SECRET=secret
+SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
