--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DEFAULT_SRC="'self'"
 SCRIPT_SRC="'self','unsafe-inline','unsafe-eval'"
 SESSION_SECRET=secret
 SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
+JWT_SECRET=secret
