--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ SCRIPT_SRC="'self','unsafe-inline','unsafe-eval'"
 SESSION_SECRET=secret
 SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
 JWT_SECRET=secret
+REDIS='{"host": "redis", "port": 6379}'
