--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/swagger": "^7.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
+    "ioredis": "^5.3.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
