--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ SESSION_SECRET=secret
 SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
 JWT_SECRET=secret
 REDIS='{"host": "redis", "port": 6379}'
+POSTGRE='{"host": "database", "port": 5432, "username": "postgres", "password": "abcde", "database": "postgres", "schema": "public"}'
