--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
+    "joi": "^17.12.3",
     "nestjs-cls": "^4.3.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
