--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
 JWT_SECRET=secret
 REDIS='{"host": "redis", "port": 6379}'
 POSTGRE='{"host": "database", "port": 5432, "username": "postgres", "password": "abcde", "database": "postgres", "schema": "public"}'
+MONGO='{"host": "mongo", "port": 27017, "username": "root", "password": "example", "database": "test", "authSource": "admin"}'
