--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.7",
+    "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
-    "@nestjs/core": "^10.3.7",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.7",
+    "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
@@ -36,8 +36,9 @@
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.18.0",
     "helmet": "^7.1.0",
-    "ioredis": "^5.3.2",
+    "ioredis": "^5.4.1",
     "joi": "^17.12.3",
+    "mongodb": "^5.9.2",
     "nestjs-cls": "^4.3.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -51,9 +52,9 @@
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.7",
+    "@nestjs/testing": "^10.3.8",
     "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.4.13",
+    "@swc/core": "^1.4.16",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
@@ -62,8 +63,8 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
