--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ SCRIPT_SRC="'self','unsafe-inline','unsafe-eval'"
 SESSION_SECRET=secret
 SWAGGER_AUTH='{"user": "admin", "password": "12345"}'
 JWT_SECRET=secret
+COOKIE_SIGN=cookie_sign
+COOKIE_SECRET=cookie_secret
 REDIS='{"host": "redis", "port": 6379}'
 POSTGRE='{"host": "database", "port": 5432, "username": "postgres", "password": "abcde", "database": "postgres", "schema": "public"}'
 MONGO='{"host": "mongo", "port": 27017, "username": "root", "password": "example", "database": "test", "authSource": "admin"}'
