--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "class-validator": "^0.14.1",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.18.0",
@@ -62,6 +63,7 @@
     "@swc/core": "^1.4.16",
     "@types/cache-manager": "^4.0.6",
     "@types/cookie-parser": "^1.4.7",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
