--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cache-manager-redis-yet": "^5.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.4",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "crypto-js": "^4.2.0",
