--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
+    "aws-sdk": "^2.1614.0",
     "bull": "^4.12.2",
     "cache-manager": "^5.5.1",
     "cache-manager-redis-yet": "^5.0.0",
@@ -69,6 +70,7 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
