--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/bull": "^10.1.1",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.8",
@@ -33,6 +34,7 @@
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "aws-sdk": "^2.1614.0",
+    "axios": "^1.6.8",
     "bull": "^4.12.2",
     "cache-manager": "^5.5.1",
     "cache-manager-redis-yet": "^5.0.0",
