--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "reflect-metadata": "^0.2.2",
     "request-ip": "^3.3.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.33.3",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -76,12 +77,14 @@
     "@types/node": "^20.12.7",
     "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
+    "@types/sharp": "^0.32.0",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "hbs": "^4.2.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
