--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^16.4.5",
     "express-basic-auth": "^1.2.1",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.1.0",
     "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "joi": "^17.12.3",
